--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit voluptas tempora dolorum maiores, necessitatibus ea alias. Voluptate, maxime deserunt veniam libero veritatis molestiae itaque, dolores beatae, et saepe praesentium officiis.</h1>
     <div class="grid">
         <div class="grid-item">1</div>
         <div class="grid-item">2</div>
